--- a/api-example/package.json
+++ b/api-example/package.json
@@ -16,11 +16,13 @@
     "@vue/cli-plugin-babel": "^4.4.0",
     "@vue/cli-plugin-eslint": "^4.4.0",
     "@vue/cli-service": "^4.4.0",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "vue-axios": "2.1.5",
     "vue-template-compiler": "^2.6.11"
   }
 }
